--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -232,7 +232,7 @@
     <Content Include="Views\Vehicles\Details.cshtml" />
     <Content Include="Views\Vehicles\Edit.cshtml" />
     <Content Include="Views\Vehicles\Index.cshtml" />
-    <Content Include="Views\Owners\AllVehicles.cshtml" />
+    <Content Include="Views\Owners\OwnerVehicles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
